# libgd

./: .cirrus.yml  .cvsignore  .gitattributes  .gitignore  .hgignore  .hgtags  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  COPYING  ChangeLog  Makefile.am  Makefile.gd  Makefile.vc  NEWS  README  README.md  SECURITY.md  appveyor.yml  appveyor_Makefile.vc  appveyor_run_tests.bat  bootstrap.sh  configure.ac  make_drone.io  thumbs  thumbs.bat  thumbs.sh
docs/: CMakeLists.txt  ChangeLog.historic  INSTALL  INSTALL.Solaris  Makefile.am  NEWS.historic  README.CMAKE  README.JPN  README.TESTING  README.TXT  README_CI.md
docs/manual/: manual-2.0.36.html
docs/naturaldocs/: build_gh_pages.sh  license.txt  nobgd.pl  preamble.txt  run_docs.sh
examples/: .cvsignore  CMakeLists.txt  Makefile.am  arc.c  avif2jpeg.c  circletexttest.c  copyrotated.c  crop.c  curvedrectangle.c  curveto.c  dashed.c  fillandstroke.c  flip.c  fontwheeltest.c  ft.c  ft2.c  gd2time.c  gddemo.c  gdtestft.c  gif.c  gifanimtest.c  imagescale.c  jpeg2avif.c  jpeg2avifex.c  linecap.c  linejoin.c  nnquant.c  noIcon.pic  noIcon.sgi  noIcon.tga  noIconAlpha.tga  path_arcfillimage.c  path_imagesource.c  path_pattern.c  patharc.c  pathclip.c  pathnegativearc.c  png2avif.c  png2heif.c  resize.c  (+9 more)
src/: .cvsignore  .hgtags  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  HISTORY  INSTALL  ISSUES  Makefile  Makefile.am  Makefile.in  Makefile.nt  NEWS  README  README.TESTING  README.TXT  aclocal.m4  alphachanneltest.html  annotate.c  bdf-howto.txt  bdftogd  bmp.h  bootstrap.sh  circletexttest.c  config.h.cmake  config.hin  configure  configure.ac  configure.in  entities.c  entities.h  entities.html  entities.py  entities.tcl  entities_gen.c  err.out  fontconfigtest.c  fontsizetest.c  fontwheeltest.c  (+141 more)
src/VMS/: CONFIGURE.COM  README.VMS
src/cmake/: Makefile.am
src/config/: .cvsignore  Makefile.in  gdlib-config.in
src/ftraster/: gd_ft_raster.c  gd_ft_raster.h  gd_ft_stroker.c  gd_ft_stroker.h
src/msinttypes/: stdint.h
src/netware/: Makefile  Makefile.am  Makefile.netware  get_exp.awk  get_ver.awk  keepscreen.c  mkgdimp.pl  nwlibc.c
src/test/: Makefile.in  gdtest.gd2
src/tests/: CMakeLists.txt  Makefile.am  README  bug00001.c  bug00002_1.c  bug00002_2.c  bug00002_3.c  bug00003.c  bug00004.c  bug00005.c  bug00007.c  bug00008.c  bug00010.c  bug00011.c
src/windows/: .cvsignore  Makefile  Makefile.am  Makefile.w32  libgd.rc
tests/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  gdhelpers.c  test_config.h.in
tests/avif/: .gitignore  CMakeLists.txt  Makemodule.am  Makemodule.am.rej  avif_im2im.c  avif_null.c  avif_ptr_double_free.c  baboon.avif  bad_input.c  compare_avif_to_png.c  dice_with_alpha.avif  sunset.avif  wbmp_im2im.c  wbmp_null
tests/bmp/: .gitignore  CMakeLists.txt  Makefile.am  Makemodule.am  bmp_im2im.c  bmp_low_depth.c  bmp_null.c  bmp_size.c  bug00275.c  bug00276.c  bug00450.c
tests/fontconfig/: CMakeLists.txt  Makemodule.am  basic.c
tests/freetype/: .gitignore  CMakeLists.txt  Makefile.am  Makemodule.am  bug00132.c
tests/gd/: .gitignore  CMakeLists.txt  Makefile.am  Makemodule.am  bug00383.c  bug00383.gd  gd_im2im.c  gd_null.c  gd_num_colors.c  gd_versiontest.c
tests/gd2/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  Makemodule.am  bug00209.c  bug00309.c  bug00354.c  bug00383.c  bug00383.gd2  bug797.c  bug797.gd2  bug_289.c  conv_test.sh  createimagefromgd2part.c  createimagefromgd2partptr.c  gd2_empty_file.c  gd2_im2im.c  gd2_null.c  gd2_read.c  gd2_read_corrupt.c  invalid_header.gd2  invalid_neg_size.sh  php_bug_72339.c  too_few_image_data.c
tests/gd_error/: .gitignore  CMakeLists.txt  Makemodule.am  bug00252.c
tests/gdcolormaplookup/: .gitignore  CMakeLists.txt  Makemodule.am  gdcolormaplookup.c
tests/gdimagearc/: .gitignore  CMakeLists.txt  Makemodule.am  bug00079.c
tests/gdimagebrightness/: Makemodule.am  basic.c
tests/gdimageclone/: .gitignore  CMakeLists.txt  Makemodule.am  bug00300.c  polyInts.c  style.c  tilebrush.c
tests/gdimagecolor/: Makemodule.am  basic.c
tests/gdimagecolorclosest/: .cvsignore  .gitignore  CMakeLists.txt  Makemodule.am  gdimagecolorclosest.c
tests/gdimagecolorclosesthwb/: .gitignore  CMakeLists.txt  Makemodule.am  gdImageColorClosestHWB.c
tests/gdimagecolordeallocate/: .cvsignore  .gitignore  CMakeLists.txt  Makemodule.am  gdimagecolordeallocate.c
tests/gdimagecolorexact/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  Makemodule.am  gdimagecolorexact.c
tests/gdimagecolormatch/: .gitignore  CMakeLists.txt  Makemodule.am  cve_2019_6977.c  gdimagecolormatch.c
tests/gdimagecolorreplace/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  Makemodule.am  gdimagecolorreplace.c
tests/gdimagecolorresolve/: .gitignore  CMakeLists.txt  Makemodule.am  gdimagecolorresolve.c
tests/gdimagecolortransparent/: .gitignore  CMakeLists.txt  Makefile.am  Makemodule.am  gdimagecolortransparent.c
tests/gdimagecompare/: .gitignore  CMakeLists.txt  Makemodule.am  colorstotalcompare.c  gdimagecompare.c  interlacecompare.c  transparentcompare.c  truecolorcompare.c  xycompare.c
tests/gdimagecontrast/: CMakeLists.txt  Makemodule.am  basic.c
tests/gdimageconvolution/: .gitignore  CMakeLists.txt  Makemodule.am  basic.c  bug00369.c  gh965.c
tests/gdimagecopy/: .gitignore  CMakeLists.txt  Makemodule.am  bug00007.c  bug00081.c
tests/gdimagecopymerge/: .gitignore  CMakeLists.txt  Makemodule.am  gdimagecopymerge.c
tests/gdimagecopymergegray/: .gitignore  CMakeLists.txt  Makemodule.am  gdimagecopymergegray.c
tests/gdimagecopyresampled/: .gitignore  CMakeLists.txt  Makemodule.am  basic.c  basic_alpha.c  bug00201.c  exact_alpha.c
tests/gdimagecopyresized/: .gitignore  CMakeLists.txt  Makemodule.am  gdimagecopyresized.c  github_bug_00638_transparent_png.c
tests/gdimagecopyrotated/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  Makemodule.am  bug00020.c  bug00320.c
tests/gdimagecreate/: .gitignore  CMakeLists.txt  Makemodule.am  bug00340.c
tests/gdimagecrop/: .gitignore  bug00297.c  (+7 more)
(+592 files in other folders)
